@@ -229,6 +229,21 @@ int Game_window::paint_map
 	if (in_dungeon >= skip_above_actor && !cheat.in_map_editor())
 		paint_blackness (start_chunkx, start_chunky, stop_chunkx, 
 						stop_chunky, ice_dungeon?73:0);
+
+					// Outline selected objects.
+	const vector<Game_object *>& sel = cheat.get_selected();
+	for (vector<Game_object *>::const_iterator it = sel.begin();
+						it != sel.end(); ++it)
+		{
+		Game_object *obj = *it;
+		int lift = obj->get_lift();
+		if (lift < skip_lift && lift < skip_above_actor)
+			{
+			int x, y;
+			get_shape_location(obj, x, y);
+				paint_hit_outline(x, y, obj->get_shape());
+			}
+		}
 					// Paint tile grid if desired.
 	if (cheat.in_map_editor() && cheat.show_tile_grid())
 		Paint_grid(this, xforms[10]);
